--- a/circular_stacked_barplot/circular_stacked_barplot.ipynb
+++ b/circular_stacked_barplot/circular_stacked_barplot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "circular_stacked_barplot.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbGCcWujtamJnTXMyFKNVL",
+      "authorship_tag": "ABX9TyOhhoWbwjIrV9fri6QtLwGD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Imports"
+        "## 1. Imports"
       ],
       "metadata": {
         "id": "ADFsmgojlqJq"
@@ -609,15 +609,21 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "## References\n",
+        "\n",
+        "[1] https://www.python-graph-gallery.com/circular-barplot-with-groups \n",
+        "Click on **Circular Barplot Section** and in **Grouped Circular barplot** section click on first plot **How to add a gap in a circular bar plot**\n",
+        "\n",
+        "[2] https://matplotlib.org/stable/gallery/lines_bars_and_markers/bar_stacked.html\n",
+        "\n",
+        "[3] https://www.r-graph-gallery.com/299-circular-stacked-barplot.html#:~:text=A%20circular%20barplot%20is%20a,barplot%20with%20R%20and%20ggplot2%20.&text=bar%20section%20Warning-,A%20circular%20barplot%20is%20a%20barplot%20where%20bars%20are%20displayed,circle%20instead%20of%20a%20line.\n",
+        "Add text showing the value of each reference line"
       ],
       "metadata": {
-        "id": "zZg3b_6MmrE_"
-      },
-      "execution_count": 12,
-      "outputs": []
+        "id": "4_lwx0G5nW5W"
+      }
     }
   ]
 }
