--- a/data_science/circular_stacked_barplot/circular_stacked_barplot.ipynb
+++ b/data_science/circular_stacked_barplot/circular_stacked_barplot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "circular_stacked_barplot.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNled7l2/VxzIql5LhvkBBT",
+      "authorship_tag": "ABX9TyOqREFIWSFSjWjywWfsq8Ro",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -611,7 +611,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Example: when there is a values much bigger than the others"
+        "# Example: when there are a values much bigger than the others"
       ],
       "metadata": {
         "id": "hA7tk0D4Gyh7"
